--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   font-family: "Prata", serif;
   font-size: 18px;
   color: #7a7a7a;
+  background-color: #fff;
 }
 
 *,
@@ -10,45 +11,156 @@ body {
   box-sizing: border-box;
 }
 
-.clearfix{
-    clear: both;
+.clearfix {
+  clear: both;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
 
+p {
+  margin: 0;
+}
 
 /* Header
 ===================*/
 
-.container{
-    width: 100%;
-    max-width: 1170px;
-    margin: 0 auto;
-    text-align: center;
+.container {
+  width: 100%;
+  font-size: 0;
+  max-width: 1170px;
+  margin: 0 auto;
+  text-align: center;
 }
 
-.header {
-    /* padding: 32px 0; */
-}
-
-.nav{
-    display: inline-block;
-    
-    font-size: 20px;
-    align-content: center;
-    
-    
+/* Nav
+===================*/
+.nav {
+  display: inline-block;
+  font-size: 20px;
+  align-content: center;
+  margin: 0;
 }
 
 .nav__link {
-    display: block;
-    float: left;
-    padding: 28px 23px;
-    color: #1d1d1d;
-    text-decoration: none;
-    transition: background  .2s;
+  display: block;
+  float: left;
+  padding: 28px 23px;
+  color: #1d1d1d;
+  text-decoration: none;
+  transition: background 0.2s;
 }
 
-.nav__link:hover{
-    background: #12ac99;
-    color: white;
+.nav__link:hover {
+  background: #12ac99;
+  color: white;
 }
+
+/* Intro
+===================*/
+
+.intro {
+  height: 880px;
+  background: #e3dcd6 url(images/bg_intro.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  position: relative;
+}
+
+/* Info
+===================*/
+.info {
+  height: 660px;
+  width: 670px;
+  background: #12ac99;
+  position: absolute;
+  bottom: 0;
+  right: 137px;
+}
+
+.info__top {
+  height: 66%;
+  background: #ededed;
+  text-align: center;
+}
+
+.info__bottom {
+  border-top: 4px solid #049885;
+  text-align: center;
+}
+
+.info__title1 {
+  font-family: "Sail", cursive;
+  padding-top: 55px;
+  color: #05a893;
+  font-size: 64px;
+  font-weight: 400;
+}
+
+.info__span {
+  font-size: 0.7em;
+}
+
+.info__subtitle {
+  padding: 35px 0;
+  font-size: 25px;
+  color: #403f3f;
+  font-weight: 400;
+}
+
+.line {
+  margin: 0 auto;
+  height: 0.6px;
+  width: 270px;
+  background: radial-gradient(#3a3a3a, #e2e2e2);
+}
+
+.info__address1 {
+  color: #1d1d1d;
+  font-size: 30px;
+  padding: 30px 0;
+}
+
+.info__address2 {
+  display: inline-block;
+  width: 270px;
+
+  color: #403f3f;
+}
+
+.info__title2{
+  margin: 46px 0 37px;
+  color: white;
+  font-weight: 400;
+}
+
+.date{
+  width: 100%;
+  max-width: 375px;
+  margin: 0 auto;
+}
+
+.date__element{
+  width: 60px;
+  font-size: 16px;
+  margin-left: 45px;
+  float: left;
+  color: white;
+
+}
+
+.date__element:first-child{
+  margin-left: 0;
+}
+
+
+.date__span{
+  font-size: 40px;
+}
+
