--- a/style.css
+++ b/style.css
@@ -183,37 +183,33 @@ p {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-.social__btn {
+
+.social__icon {
   display: block;
+  margin-top: 20px;
+  margin: 20px 0px 0px 17px;
   height: 60px;
   width: 60px;
   border-radius: 50%;
   background: #05a893;
-  margin: 0 auto;
-  margin-top: 20px;
-  position: relative;
+  color: white;
+  font-size: 35px;
+  line-height: 60px;
+  text-align: center;
+  transition:color .3s, background .3s, transform .3s;
 }
 
-.social__btn:first-child {
-  margin-top: 45px;
+.fa-facebook-f:first-child {
+  margin-top: 40px;
 }
 
-a svg {
-  transition: 0.4s;
+.social__icon:hover {
+  color: #05a893;
+  background: white;
+  transform: scale(1.3);
 }
 
-a svg:hover #facebook,
-a svg:hover #twitter,
-a svg:hover #instagram,
-a svg:hover #youtube {
-  fill: rgb(56, 56, 56);
-  width: 32px;
-  height: 32px;
-}
 
-a svg:hover {
-  transform: scale(1.5);
-}
 
 /* Arrow buttons
 ===================*/
@@ -325,12 +321,12 @@ a svg:hover {
   text-align: left;
 }
 
-.groom1__inner{
+.groom1__inner {
   width: 490px;
   margin: 0 auto;
 }
 
-.groom1 h3{
+.groom1 h3 {
   display: block;
   font-family: "Sail", cursive;
   font-size: 30px;
@@ -341,7 +337,7 @@ a svg:hover {
   float: left;
 }
 
-.groom1__line{
+.groom1__line {
   display: block;
   float: left;
   margin: 77px 0 0 20px;
@@ -350,7 +346,6 @@ a svg:hover {
   background: #05a893;
 }
 
-.groom1 p{
+.groom1 p {
   color: #666666;
 }
-
