--- a/style.css
+++ b/style.css
@@ -183,7 +183,6 @@ p {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
-
 .social__icon {
   display: block;
   margin-top: 20px;
@@ -196,7 +195,7 @@ p {
   font-size: 35px;
   line-height: 60px;
   text-align: center;
-  transition:color .3s, background .3s, transform .3s;
+  transition: color 0.3s, background 0.3s, transform 0.3s;
 }
 
 .fa-facebook-f:first-child {
@@ -209,7 +208,9 @@ p {
   transform: scale(1.3);
 }
 
-
+.social a {
+  text-decoration: none;
+}
 
 /* Arrow buttons
 ===================*/
@@ -279,20 +280,20 @@ p {
 /* About title
 ===================*/
 
-.about__title {
+.title {
   width: 665px;
   margin: 0 auto;
   padding-top: 98px;
 }
 
-.about__title h2 {
+.title h2 {
   font-size: 48px;
   font-family: "Sail", cursive;
   color: #05a893;
   font-weight: 400;
 }
 
-.about__title p {
+.title p {
   margin-top: 30px;
   margin-bottom: 78px;
 }
@@ -302,31 +303,29 @@ p {
 
 .about__gallery {
   height: 610px;
-  background: red;
   z-index: 1;
 }
 
 .about__inf {
   width: 50%;
   height: 50%;
-  background: green;
   float: left;
 }
 
-/* About groom
+/* About bio + photo
 ===================*/
 
-.groom1 {
+.bio {
   background: #f5fdff;
   text-align: left;
 }
 
-.groom1__inner {
+.bio__inner {
   width: 490px;
   margin: 0 auto;
 }
 
-.groom1 h3 {
+.bio h3 {
   display: block;
   font-family: "Sail", cursive;
   font-size: 30px;
@@ -337,7 +336,7 @@ p {
   float: left;
 }
 
-.groom1__line {
+.bio__line {
   display: block;
   float: left;
   margin: 77px 0 0 20px;
@@ -346,6 +345,108 @@ p {
   background: #05a893;
 }
 
-.groom1 p {
+.bio p {
   color: #666666;
+}
+
+.groom {
+  background-image: url(images/Groom.jpg);
+  background-size: cover;
+}
+
+.bride {
+  background-image: url(images/Bride.jpg);
+  background-size: cover;
+}
+
+/* About social btns
+===================*/
+
+.bio__inner .icon {
+  color: black;
+  margin: 20px 0 0 20px;
+  transition: color 0.2s, transform 0.2s;
+}
+
+.bio .fa-facebook-f {
+  margin-left: 0;
+}
+
+.bio .icon:hover {
+  color: #05a893;
+  transform: scale(1.5);
+}
+
+/* Gallary
+===================*/
+
+.gallary {
+  background: #f5fdff;
+  height: 1265px;
+}
+
+.photo{
+  float: left;
+}
+
+.photo1,
+.photo6 {
+  width: 769px;
+  height: 269px;
+  background: black;
+}
+
+.photo2,
+.photo4,
+.photo5{
+  width: 369px;
+  height: 269px;
+  background: red;
+}
+
+.photo3{
+  width: 369px;
+  height: 569px;
+  margin-top: 30px;
+  background-image: url();
+}
+
+.photo4,
+.photo5, 
+.photo6{
+  margin: 30px 0 0 30px;
+}
+
+.photo2{
+  margin-left: 30px;
+}
+
+.photo1{
+  background-image: url(images/gallary/1.jpg);
+  background-size: cover;
+}
+
+.photo2{
+  background-image: url(images/gallary/2.jpg);
+  background-size: cover;
+}
+
+.photo3{
+  background-image: url(images/gallary/3.jpg);
+  background-size: cover;
+}
+
+.photo4{
+  background-image: url(images/gallary/4.jpg);
+  background-size: cover;
+}
+
+.photo5{
+  background-image: url(images/gallary/5.jpg);
+  background-size: cover;
+}
+
+.photo6{
+  background-image: url(images/gallary/6.jpg);
+  background-size: cover;
 }
