--- a/style.css
+++ b/style.css
@@ -350,11 +350,13 @@ p {
 }
 
 .groom {
+  background-color: #e3dcd6;
   background-image: url(images/Groom.jpg);
   background-size: cover;
 }
 
 .bride {
+  background-color: #e3dcd6;
   background-image: url(images/Bride.jpg);
   background-size: cover;
 }
@@ -385,68 +387,193 @@ p {
   height: 1265px;
 }
 
-.photo{
+.photo {
   float: left;
+  background-color: #e3dcd6;
 }
 
 .photo1,
 .photo6 {
   width: 769px;
   height: 269px;
-  background: black;
 }
 
 .photo2,
 .photo4,
-.photo5{
+.photo5 {
   width: 369px;
   height: 269px;
-  background: red;
 }
 
-.photo3{
+.photo3 {
   width: 369px;
   height: 569px;
   margin-top: 30px;
-  background-image: url();
-}
-
-.photo4,
-.photo5, 
-.photo6{
-  margin: 30px 0 0 30px;
-}
-
-.photo2{
-  margin-left: 30px;
-}
-
-.photo1{
-  background-image: url(images/gallary/1.jpg);
+  background-image: url(images/gallary/3.jpg) ;
   background-size: cover;
 }
 
-.photo2{
+.photo4,
+.photo5,
+.photo6 {
+  margin: 30px 0 0 30px;
+}
+
+.photo2 {
+  margin-left: 30px;
   background-image: url(images/gallary/2.jpg);
   background-size: cover;
 }
 
-.photo3{
-  background-image: url(images/gallary/3.jpg);
+.photo1 {
+  background-image: url(images/gallary/1.jpg);
   background-size: cover;
 }
 
-.photo4{
+.photo4 {
   background-image: url(images/gallary/4.jpg);
   background-size: cover;
 }
 
-.photo5{
+.photo5 {
   background-image: url(images/gallary/5.jpg);
   background-size: cover;
 }
 
-.photo6{
+.photo6 {
   background-image: url(images/gallary/6.jpg);
+  background-size: cover;
+}
+
+
+
+/* Story
+===================*/
+.story {
+  height: 3000px;
+  position: relative;
+}
+
+
+
+/* Story decoration pic
+===================*/
+
+.deco2 {
+  position: absolute;
+  right: 0;
+  top: 325px;
+}
+
+.deco3{
+  position: absolute;
+  left: 0;
+  bottom: 220px;
+  border
+}
+
+/* Story photo + description №1
+===================*/
+
+.story .container{
+  max-width: 1300px
+}
+
+.story-container__decor{
+  float: left;
+  position: relative;
+  height: 604px;
+  width: 604px;
+  background-image: url(images/deco4.png);
+}
+
+.story-container__img{
+  position: absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%, -50%);
+  height: 470px;
+  width: 470px;
+  border-radius: 50%;
+  background-image: url(images/story/1.jpg);
+  background-size: cover;
+}
+
+.story-container__description{
+  float: left;
+  margin: 180px 0 0 70px;
+  text-align: left;
+  width: 560px;
+}
+
+.story-date{
+  float: left;
+  color: #5f5f5f;
+}
+
+.story-container__line{
+  float: left;
+  margin-top: 10px;
+  margin-left: 20px;
+  width: 26px;
+  height: 2px;
+  background: black;
+}
+
+.story-container__description h3{
+  margin: 15px 0 30px 0;
+  font-family: "Sail", cursive;
+  color: #05a893;
+  font-size: 30px;
+  font-weight: 400;
+
+}
+
+.read-more{
+  margin-top: 30px;
+  font-size: 20px;
+  color: #05a893;
+}
+
+
+/* Story photo + description №2
+===================*/
+.story-container2{
+  margin-top: 50px;
+}
+
+.story-container2 .story-container__img{
+  background-image: url(images/story/2.jpg);
+  background-size: cover;
+}
+
+.story-container2 .story-container__decor{
+  float: right;
+}
+
+.story-container2 .story-container__description{
+  float: right;
+  margin: 210px 70px 0 0;
+}
+
+
+/* Story photo + description №3
+===================*/
+
+.story-container3{
+  margin-top: 50px;
+}
+
+.story-container3 .story-container__img{
+  background-image: url(images/story/3.jpg);
+  background-size: cover;
+}
+
+
+/* Story photo + description №4
+===================*/
+
+#copy4 .story-container__img {
+  background-image: url(images/story/4.jpg);
   background-size: cover;
 }
