--- a/style.css
+++ b/style.css
@@ -737,3 +737,89 @@ p {
   color: white;
 }
 
+
+/* Form
+===================*/
+
+.form{
+  position: relative;
+  height: 763px;
+  background: #a3a3a3;
+}
+
+.invitation{
+  position: absolute;
+  height: 763px;
+  width: 933px;
+  margin-left: 673px;
+  background: white;
+  z-index: 1;
+  text-align: center;
+}
+
+.deco5{
+  position: absolute;
+  left: 440px;
+  top: 17px;
+}
+
+.deco6{
+  position: absolute;
+  right: 87px;
+  top: 17px;
+}
+
+.invitation p{
+  display: block;
+  width: 505px;
+  margin: 0 auto;
+  padding: 35px 0 70px 0;
+}
+
+
+/* Input
+===================*/
+
+input{
+  width: 370px;
+  height: 30px;
+  margin-bottom: 50px;
+  border: none;
+  border-bottom: 2px solid #959595;
+  color: #888787;
+  font-size: 20px;
+  text-align: left;
+}
+
+.invitation__name, .invitation__gnumber{
+  margin-right: 30px;
+}
+
+.invitation__message{
+  width: 770px;
+}
+
+.invitation__submit{
+  width: 250px;
+  height: 65px;
+  background: #05a893;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  text-align: center;
+  float: right;
+  margin-right: 81.5px;
+}
+
+
+
+/* Input
+===================*/
+
+footer .title{
+  padding-top: 45px;
+}
+
+footer .title p{
+  margin-bottom: 40px;
+}
